# crazyswarm2

./: .gitignore  .gitmodules  README.md  rosinstall
crazyflie/: CMakeLists.txt
crazyflie/config/: crazyflies.yaml  motion_capture.yaml  server.yaml
crazyflie/launch/: launch.py
crazyflie/src/: crazyflie_server.cpp
crazyflie_interfaces/: CMakeLists.txt
crazyflie_interfaces/srv/: ConnectDrone.srv
nokov_swarm/: package.xml  setup.cfg  setup.py
nokov_swarm/launch/: launch.py
